--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Playlist_activity"
+            android:exported="false" />
+        <activity
             android:name=".Register_activity"
             android:exported="false" />
         <activity
