commit update Playlist
Playlist works finally
Search works but can be worked on

-Need to implement delete playlist button
-Need to check the MusicService and make sure is not called when not needed to be called

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,9 @@ dependencies {
     // Firebase Firestore
     implementation 'com.google.firebase:firebase-firestore:21.6.0'
 
+    //Firebase Cloud
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.1'
+
     // Firebase Storage KTX
     implementation 'com.google.firebase:firebase-storage-ktx:19.2.0'
 
